@@ -500,9 +500,12 @@ class Thread(_Verbose):
                 return
             raise
 
+    def _set_ident(self):
+        self.__ident = _get_ident()
+
     def __bootstrap_inner(self):
         try:
-            self.__ident = _get_ident()
+            self._set_ident()
             self.__started.set()
             _active_limbo_lock.acquire()
             _active[self.__ident] = self
@@ -734,6 +737,7 @@ class _MainThread(Thread):
     def __init__(self):
         Thread.__init__(self, name="MainThread")
         self._Thread__started.set()
+        self._set_ident()
         _active_limbo_lock.acquire()
         _active[_get_ident()] = self
         _active_limbo_lock.release()
@@ -780,6 +784,7 @@ class _DummyThread(Thread):
         del self._Thread__block
 
         self._Thread__started.set()
+        self._set_ident()
         _active_limbo_lock.acquire()
         _active[_get_ident()] = self
         _active_limbo_lock.release()
