@@ -92,6 +92,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5632: Thread.ident was None for the main thread and threads not created
+  with the threading module.
+
 - Issue #5400: Added patch for multiprocessing on netbsd compilation/support
 
 - Fix and properly document the multiprocessing module's logging
